# self_cursor_lvgl_test

./: lv_conf.h
examples/: CMakeLists.txt  test_app.c
